--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="clients-heading wow fadeInLeft">
-            <h1 class="text-light">לקוחות מספרים </h1>
-            <p>אנו עובדים עם לקוחות פרטיים ותאגידים גדולים כאחד </p>
+            <h1 class="text-light">Our Clients Say</h1>
+            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.</p>
           </div>
         </div>
       </div>
@@ -345,9 +346,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"לאורך כל התהליך קיבלתי ליווי משפטי מקצועי, יסודי ואכפתי. הצוות היה זמין לכל שאלה, הסביר לי כל שלב בדרך ודאג לאינטרסים שלי עד להשגת התוצאה הטובה ביותר. אני ממליץ בחום לכל מי שמחפש ייצוג משפטי אמין ומקצועי!" </p>
-              <h3 class="text-light">אלון סמית </h3>
-              <h6 class="text-light">מנכ"ל חברת חירטוטים </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -362,9 +366,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"מהרגע הראשון הרגשתי שאני בידיים טובות. המקצועיות, היסודיות והיחס האישי עשו את כל ההבדל. תודה על הליווי הצמוד והנחישות שהובילה לתוצאה מצוינת! ממליצה בחום לכל מי שזקוק לייצוג משפטי." </p>
-              <h3 class="text-light">מיכאלה דיין</h3>
-              <h6 class="text-light">חברת מקורות </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -379,9 +386,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"לאורך כל הדרך הרגשתי שיש לי על מי לסמוך. מהרגע הראשון קיבלתי יחס אישי, סבלנות והסברים מפורטים על כל שלב בתהליך. הצוות הפגין מקצועיות יוצאת דופן, ירידה לפרטים וחשיבה אסטרטגית שהובילה לתוצאה הטובה ביותר עבורי. תמיד הרגשתי שיש מישהו שמקשיב לי, מבין את הצרכים שלי ונלחם למעני. אני ממליץ בחום לכל מי שמחפש משרד עורכות דין מקצועי, אמין ומסור!" </p>
-              <h3 class="text-light">אלי כהן </h3>
-              <h6 class="text-light">ייזם נדלן </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -401,8 +411,9 @@
       <div class="row pt-5">
         <div class="col-lg-8">
           <div class="publication-heading">
-            <h1>כתבו עלינו</h1>
-            <p>העבודות שלנו עזרו להמון אנשים בתחומים שונים בחיים שקיבלו את מה שמגיע להם בזכות העקשנות והמסירות שלנו </p>
+            <h1>Recent Publications</h1>
+            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.</p>
           </div>
         </div>
       </div>
@@ -501,7 +512,7 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="faq-heading wow fadeInLeft">
-            <h1 class=" text-light">שאלות נפוצות
+            <h1 class=" text-light">Frequently asked questions</h1>
             <p>
               We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
               experiences.
@@ -514,31 +525,34 @@
       <div class="row pt-5">
         <div class="col-md-6 offset-md-1">
           <div class="faq-content-1" id="one">
-            <p>מהו תהליך תביעה במקרה של תאונת דרכים?</p>
+            <p>What paperwork do I need to complete to file for divorce?</p>
           </div>
           <div id="two">
-            <p>איך אני יכול להבטיח שהחוזה שאני חותם עליו הוא הוגן?</p>
+            <p>How do I change my custody and suport orders?</p>
           </div>
           <div id="three">
-            <p>שכמה זמן ייקח להגיש תביעה נזיקית? </p>
+            <p>How to make a General Diary?</p>
           </div>
           <div id="four">
-            <p>שאלה מספר4 </p>
+            <p>What paperwork do I need to complete to file for divorce?</p>
           </div>
           <div id="five">
-            <p>שאלה מספר5 </p>
+            <p>How do I protect a business name?</p>
           </div>
           <div id="six">
-            <p>שאלה מספר6 </p>
+            <p>Should I incorporate my business?</p>
           </div>
         </div>
 
         <div class="col-md-5">
           <div class="faq-content-2 p-4">
             <p>
-              תהליך תביעה במקרה של תאונת דרכים כולל פנייה למשרדנו עם פרטי התאונה, דיווח על הנזקים שנגרמו לך, פתיחת תיק תביעה מול חברת הביטוח או בבית המשפט במידת הצורך. אנו נלווה אותך בכל שלב, כולל איסוף ראיות, התייעצות עם מומחים והגשת תביעות לפי הצורך.
-              אנו ממליצות לפנות אלינו לפני החתימה על חוזה, על מנת שנוכל לסייע בניתוח התנאים, ולהבטיח שהם הוגנים ומספקים את ההגנה המשפטית הנדרשת. משרדנו יציע שינויים או תיקונים, במידת הצורך, וידאג לשמור על זכויותיך.
-              זמן הגשת תביעה נזיקית תלוי בפרטי המקרה, אך בדרך כלל יש מגבלת זמן של 7 שנים. מומלץ לפנות בהקדם האפשרי כדי למנוע אי-נוחות עתידית, במיוחד כאשר מדובר בנזקים שלא תמיד ניתן לזהות אותם מיד.
+              Long established fact that a reader will be distracted by the readable content of a page when looking at
+              its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+              as opposed to using 'Content here, content here', making it look like readable English.
+
+              Many web sites still in their infancy. Various versions have evolved. sometimes by accident, sometimes on
+              purpose (injected humour and the like).
             </p>
           </div>
         </div>
@@ -552,9 +566,10 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="contact-heading wow fadeInLeft">
-            <h1>צור קשר </h1>
+            <h1>Contact Us</h1>
             <p>
-              השאר פרטים ונחזור אליך
+              We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.
             </p>
           </div>
         </div>
@@ -564,18 +579,17 @@
 
         <div class="col-md-4 offset-md-1">
           <form class="form">
-            <input type="text" placeholder="שם פרטי" required class="form-control">
+            <input type="text" placeholder="Enter name..." required class="form-control">
 
-            <input type="email" placeholder="אימייל" required class="form-control">
+            <input type="email" placeholder="Enter email..." required class="form-control">
 
-            <input type="text" placeholder="טלפון" required class="form-control">
+            <input type="text" placeholder="Enter number..." required class="form-control">
 
-            <input type="text" placeholder="הודעה" required class="form-control" id="message">
+            <input type="text" placeholder="Enter message..." required class="form-control" id="message">
 
-            <input type="submit" value="שלח" class="btn btn-custom text-center">
+            <input type="submit" value="Send Message" class="btn btn-custom text-center">
           </form>
         </div>
-
 
         <div class="col-md-4 offset-md-1 map-frame">
           <div class="map">
