--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en">
 
 <head>
 
@@ -30,7 +30,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 
-  <title>משרד עורכי דין || גוילי מורים</title>
+  <title>Law Farm || Mrh Rifat</title>
 </head>
 
 <body id="page-top">
@@ -44,7 +44,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
           <img src="img/logo1.png" alt="Logo" class="img-fluid">
           <span></span>
-          <label>גוילי-מורים</label>
+          <label>Law Farm</label>
         </a>
 
         <!-- Toggle Button -->
@@ -58,25 +58,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#page-top">דף הבית</a>
+              <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about-us">קצת עלינו</a>
+              <a class="nav-link js-scroll-trigger" href="#about-us">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#practice-area">תחום עיסוק</a>
+              <a class="nav-link js-scroll-trigger" href="#practice-area">Practice Area</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#lawyers">עורכי הדין</a>
+              <a class="nav-link js-scroll-trigger" href="#lawyers">Lawyers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#publications">פרסומים</a>
+              <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#faq">שאלות נפוצות</a>
+              <a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">צרו קשר</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -94,13 +94,13 @@
         <div class="row">
           <div class="col-md-5 offset-md-2">
             <div class="hero-heading">
-              <h1 class="text-light">גוילי מורים</h1>
-              <h5 class="text-light">עורכי דין</h5>
+              <h1 class="text-light">Adam Suaerez</h1>
+              <h5 class="text-light">Lawyer</h5>
             </div>
           </div>
-          <!--<div class="col-md-5  pt-5">
-             <button class="btn btn-custom">Contact Me</button>
-          </div>-->
+          <div class="col-md-5  pt-5">
+            <button class="btn btn-custom">Contact Me</button>
+          </div>
         </div>
       </div>
     </div>
@@ -114,9 +114,10 @@
       <div class="row">
         <div class="col-md-7">
           <div class="about-heading wow fadeInLeft">
-            <h1>קצת עלינו </h1>
+            <h1>About Us</h1>
             <p>
-              משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחותינו ליווי משפטי מקצועי, אישי ומדויק. עם ניסיון עשיר ויחס מחויב לכל תיק, אנו פועלות בנחישות למימוש זכויותיכם ולהשגת התוצאה הטובה ביותר.
+              We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.
             </p>
           </div>
         </div>
@@ -126,38 +127,41 @@
       <div class="row pt-5">
         <div class="col-md-6">
           <!-- History -->
-          <h5>היסטוריה </h5>
+          <h5>History</h5>
 
           <!-- History 1 Start-->
           <div class="row pt-3">
             <div class="col-md-3 pl-4">
-              <h6>-2023</h6>
+              <h6>-2018</h6>
             </div>
             <div class="col-md-9">
               <p>
-                ליווינו בהצלחה עשרות לקוחות בתביעות נזיקין מורכבות וחתמנו על שורה של הסכמים משמעותיים בתחום החוזים.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
               </p>
             </div>
             <!-- History 1 End-->
 
             <!-- History 2 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2024</h6>
+              <h6>-2019</h6>
             </div>
             <div class="col-md-9">
               <p>
-                הרחבנו את תחומי ההתמחות שלנו, ייצגנו לקוחות בתיקים תקדימיים והמשכנו לספק ייעוץ משפטי איכותי ומדויק.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
               </p>
             </div>
             <!-- History 2 End-->
 
             <!-- History 3 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2025</h6>
+              <h6>-2020</h6>
             </div>
             <div class="col-md-9">
               <p>
-                מתחדשות ומתפתחות! השקנו שירותים משפטיים מתקדמים, הרחבנו את הצוות שלנו, וממשיכות להוביל בתחום הנזיקין והחוזים.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
               </p>
             </div>
           </div>
@@ -168,9 +172,12 @@
         <div class="col-md-5 pb-5 expertise">
           <h5>Expertise</h5>
           <p>
-            **משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחות פרטיים ועסקיים ליווי משפטי מקצועי, יסודי ומותאם אישית. אנו מייצגות נפגעים בתביעות נזיקין מול גופים פרטיים וציבוריים, לרבות תאונות דרכים, רשלנות רפואית ותאונות עבודה. בנוסף, אנו מספקות ייעוץ וייצוג משפטי בתחום החוזים – מניסוח ועריכת חוזים מסחריים ופרטיים ועד ליישוב סכסוכים והליכים משפטיים.
-            
-            עם ניסיון עשיר, ידע מעמיק ונחישות בלתי מתפשרת, אנו מחויבות להעניק לכל לקוח את המענה המשפטי המדויק והמקצועי ביותר, תוך ליווי אישי ושקיפות מלאה לאורך כל הדרך.**
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
           </p>
         </div>
         <!-- Expertise End -->
@@ -187,8 +194,9 @@
       <div class="row">
         <div class="col-lg-7">
           <div class="practice-heading wow fadeInLeft">
-            <h2 class="text-light">תחום עיסוקנו </h2>
-            <p>משרדנו מתמחה בדיני נזיקין וחוזים, ומספק ללקוחותינו ליווי משפטי מקיף – מתביעות נזיקין בגין נזקי גוף ורכוש ועד לייעוץ, ניסוח וייצוג בסוגיות חוזיות מורכבות, תוך דגש על מקצועיות, יסודיות ושירות אישי. </p>
+            <h2 class="text-light">Practice Area</h2>
+            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.</p>
           </div>
         </div>
       </div>
@@ -279,8 +287,9 @@
         <div class="col-lg-7">
           <!-- Lawyers Heading Start -->
           <div class="lawyers-heading wow fadeInLeft">
-            <h1>מי אנחנו? </h1>
-            <p>צוות מוכשר, בעלות ניסייון, אכפתיות ונתינה אינסופית </p>
+            <h1>Meet Our Attorney</h1>
+            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.</p>
           </div>
           <!-- Lawyers Heading End -->
         </div>
@@ -295,8 +304,8 @@
           <div class="card">
             <img src="img/team-one.png" alt="Team One" class="card-img-top">
             <div class="card-body">
-              <h5>מעיין מורים </h5>
-              <p>שותפה-מייסדת </p>
+              <h5>Adam Suarez</h5>
+              <p>Attorney General</p>
             </div>
           </div>
         </div>
@@ -308,12 +317,39 @@
           <div class="card">
             <img src="img/team-two.png" alt="Team Two" class="card-img-top">
             <div class="card-body">
-              <h5>זוהר גוילי </h5>
-              <p>שותפה-מייסדת </p>
+              <h5>Lina Suarez</h5>
+              <p>Attorney General</p>
             </div>
           </div>
         </div>
         <!-- 2nd Content End -->
+
+        <!-- 3rd Content Start -->
+        <div class="col-md-3 col-sm-6 downteam">
+          <!-- Card Content -->
+          <div class="card">
+            <img src="img/team-three.png" alt="Team Three" class="card-img-top">
+            <div class="card-body">
+              <h5>Jems Snow</h5>
+              <p>Attorney General</p>
+            </div>
+          </div>
+        </div>
+        <!-- 3rd Content End -->
+
+        <!-- 4th Content Start -->
+        <div class="col-md-3 col-sm-6 downteam">
+          <!-- Card Content -->
+          <div class="card">
+            <img src="img/team-four.png" alt="Team Four" class="card-img-top">
+            <div class="card-body">
+              <h5>Linister White</h5>
+              <p>Attorney General</p>
+            </div>
+          </div>
+        </div>
+        <!-- 4th Content End -->
+      </div>
       <!-- Practice Content End -->
     </div>
   </section>
